--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "rxjs": "~7.8.0",
+    "swiper": "^10.2.0",
     "tslib": "^2.3.0",
+    "typed.js": "^2.0.16",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -27,12 +29,14 @@
     "@angular/cli": "~16.1.1",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "angular-cli-ghpages": "^0.6.2",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ngx-deploy-npm": "^7.0.1",
     "typescript": "~5.1.3"
   }
 }
