--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@emailjs/browser": "^3.11.0",
     "@fancyapps/fancybox": "^3.5.7",
     "ngx-page-scroll": "^11.0.0",
     "rxjs": "~7.8.0",
