--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.1.0",
     "@emailjs/browser": "^3.11.0",
     "@fancyapps/fancybox": "^3.5.7",
+    "bootstrap": "^5.3.2",
     "ngx-page-scroll": "^11.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^10.2.0",
